--- a/app/views/frontend/about.html.erb
+++ b/app/views/frontend/about.html.erb
@@ -69,7 +69,7 @@
     <p class='m'>Не забывай, что для получения призов нужно не только вывесить фотографию с хештегом через Instagram или
       Twitter, но и авторизоваться на нашем сайте под тем же аккаунтом, с которого ты публикуешь фотографии.</p>
   </div>
-  <div class="button">
+  <div class="participate-button">
     <a href="">Участвовать в конкурсе</a>
   </div>
 </div>
