--- a/app/views/frontend/gifts.html.erb
+++ b/app/views/frontend/gifts.html.erb
@@ -1,41 +1,40 @@
-<div class="page-product">
-  <div class="ad-carousel">
-    <div class="carousel-content">
-      <div class="carousel-block">
-        <div class="content"> в Instagram!
-        </div>
-      </div>
-      <div class="carousel-block">
-        <div class="content"> в Instagram!
-        </div>
-      </div>
-      <div class="carousel-block">
-        <div class="content"> в Instagram!
-        </div>
-      </div>
-    </div>
+<div class="page-product gifts">
+  <div class="title-block">
+    <h3>Призы</h3>
   </div>
   <div class="tasks-top"></div>
-  <div class="tasks" style="height: 48px;">
-    <ul class="task-menu clearfix">
-    </ul>
+  <div class="tasks gift-list" style="height: 515px;">
+    <div class="gift">
+      <div class="prize-image" style="background-image: url('/assets/prize1.png');"></div>
+      <div class="info-text">
+      <h4>Первое место</h4>
+      <p>Цифровой зеркальный фотоаппарат! Для тех, кто хочет снимать фото и видео на «зеркалочку» и баловаться
+        с выдержкой и диафрагмой!</p>
+      </div>
+    </div>
+    <div class="gift">
+      <div class="prize-image" style="background-image: url('/assets/prize2.png');"></div>
+      <div class="info-text">
+      <h4><b>Второе место</b></h4>
+      <p>Инста-камера с двумя упаковками кассет. Она обязательно понравится любителям времен, когда мы с трепетом поднимали моментальный снимок
+        к люстре, чтобы он быстрее проявился.</p>
+    </div>
+    </div>
+    <div class="gift">
+      <div class="prize-image" style="background-image: url('/assets/prize3.png'); background-position: center center;"></div>
+      <div class="info-text">
+      <h4>Остальные победители</h4>
+      <p>Остальные победители, попавшие
+        в десятку лидеров по результатам недели, получат наборы из трех вкусов листового чая Lipton в премиальной упаковке.</p>
+    </div>
+    </div>
   </div>
   <div class="tasks-bottom"></div>
   <div class="containerWithPadding about_product clearfix">
-    <div class="icosBlock oHidden">
-      <img src="img/bigIco.png" alt="" />
+    <div class="anotherTxtBlock txtBlock oHidden" style="background: #f8f8f8;">
+        <div class="fintiflushka participate-button">
+          <a href="">Участвовать в конкурсе</a>
+        </div>
     </div>
-    <div class="anotherTxtBlock txtBlock oHidden">
-      <div class="fintiflushka oHidden">
-        <h2>Кругосветное путешествие с Lipton</h2>
-        <p>Чтобы отправиться в кругосветное путешествие, теперь Вам не нужно паковать чемоданы и бронировать билеты – Lipton сделал это за Вас. Ограниченная коллекция ароматов, собранная в уникальной упаковке в виде че</p>
-        <p>Проберитесь сквозь непроходимые джунгли, чтобы отыскать сокровище острова Ява – зеленый чай Lipton Green Gunpowder, чьи свернутые особым образом листочки, напоминают драгоценный зеленый жемчуг.</p>
-        <p>И, напоследок, отправьтесь в загадочное Марокко за лепестками розы, которые в сочетании с крупными чайными листьями, корицей и роскошным ароматом ванильной орхидеи составляют изысканный купаж черного чая Lipton Black Rose.</p>
-        <p>Откройте для себя мир чая с эксклюзивной коллекцией листового чая Lipton.</p>
-      </div>
-    </div>
-  </div>
-  <div class="button">
-    <a href="">Участвовать в конкурсе</a>
   </div>
 </div>
