--- a/app/views/frontend/post.js.erb
+++ b/app/views/frontend/post.js.erb
@@ -1,3 +1,7 @@
 (function(){
-
+    $('.overlay').html('<div class="background"><a href></a></div><%= escape_javascript render partial: 'post', object: @post %>');
+    $('.overlay > .popup').css('display', 'block');
+    p = $('.overlay > .popup').position();
+    $('.overlay > .popup').css('position', 'absolute');
+    $('.overlay > .popup').css('top', p.top+'px');
 })()
