--- a/app/assets/stylesheets/frontend.css.scss
+++ b/app/assets/stylesheets/frontend.css.scss
@@ -178,6 +178,10 @@ body {
         line-height: 100%;
         width: 89px;
         cursor: pointer;
+        &.inactive{
+          color: #967b4b;
+          cursor: default;
+        }
       }
       .lavalamp {
         background: url("lavalamp.png") no-repeat scroll 0 0 transparent;
@@ -190,7 +194,7 @@ body {
         width: 109px;
         position: relative;
         top: 3px;
-        padding-left: 1px;
+        left: 5px;
         -moz-transition: all 300ms ease;
         -ms-transition: all 300ms ease;
         -o-transition: all 300ms ease;
@@ -497,34 +501,6 @@ body {
       .popup-holder {
         position: static;
       }
-      .likes-counter {
-        z-index: 12;
-        position: relative;
-        margin-bottom: -20px;
-        float: right;
-        top: 5px;
-        right: 5px;
-        width: 40px;
-        height: 20px;
-        background: rgba(0, 0, 0, 0.5);
-        border-radius: 3px;
-        p {
-          text-align: right;
-          width: 35px;
-          color: white;
-          font-weight: bold;
-        }
-        p:before {
-          content: '❤';
-          font-family: arial;
-          color: white;
-          float: left;
-          padding-left: 5px;
-        }
-        &.liked p:before {
-          color: red;
-        }
-      }
     }
     .preloader {
       width: 180px;
@@ -579,7 +555,7 @@ body {
   margin-left: -306px;
   margin-top: -371px;
   background: repeat-x url("popup-bottom-background.png") bottom white;
-  z-index: 25;
+  z-index: 10025;
   font: "PT Sans";
   .info {
     .author {
@@ -659,28 +635,109 @@ body {
         background: -o-linear-gradient(bottom, #e9e9e9, #ffffff);
         background: -ms-linear-gradient(bottom, #e9e9e9, #ffffff);
         filter: progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr=#ffffff,endColorstr=#e9e9e9,GradientType=0); zoom: 1;
-box-shadow: #d3d3d3 0px 1px 4px;
+        box-shadow: #d3d3d3 0px 1px 4px;
+        }
+     }
   }
+  .image {
+    width: 612px;
+    height: 612px;
+    vertical-align: middle;
+    overflow: hidden;
+    background-size: cover;
   }
+  .text {
+    margin-top: 38px;
+    height: 32px;
+    background-size: contain;
+    background-position: right center;
+    background-repeat: no-repeat;
+    padding-right: 40px;
+    .social {
+      float: right;
+    }
   }
-.image {
-  width: 612px;
-  height: 612px;
-  vertical-align: middle;
-  overflow: hidden;
-  background-size: cover;
 }
-.text {
-  margin-top: 38px;
-  height: 32px;
-  background-size: contain;
-  background-position: right center;
-  background-repeat: no-repeat;
-  padding-right: 40px;
-  .social {
-    float: right;
+.background {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  background-attachment: fixed;
+  z-index: 10002;
+  a {
+    width: 100%;
+    height: 100%;
   }
 }
+
+.likes-counter {
+  z-index: 12;
+  position: relative;
+  margin-bottom: -20px;
+  float: right;
+  top: 5px;
+  right: 5px;
+  width: 40px;
+  height: 20px;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 3px;
+  p {
+    text-align: right;
+    width: 35px;
+    color: white;
+    font-weight: bold;
   }
+  p:before {
+    content: '❤';
+    font-family: arial;
+    color: white;
+    float: left;
+    padding-left: 5px;
+  }
+  &.liked p:before {
+    color: red;
+  }
+}
 
+.gifts {
+  .title-block {
+    width: 100%;
+    position: relative;
+    background: url('about_bg.png');
+    background-size: cover;
+    height: 100px;
+    overflow: hidden;
+    z-index: 20;
+    h3 {
+      text-align: center;
+    }
+  }
+  .gift-list{
+    background: white;
+    border: #FFBF00 10px solid;
+    .gift {
+      .prize-image {
+        height: 315px;
+        background-attachment: scroll;
+        background-position: center left;
+        background-repeat: no-repeat;
+      }
+      .info-text {
+        width: 80%;
+        padding: 0 40px;
+        h4 {
+          font-weight: normal;
+        }
+      }
+      width: 33%;
+      float: left;
+    }
+}
+}
 
+.containerWithPadding {
+  width: 100%;
+}
