--- a/app/views/frontend/about.html.erb
+++ b/app/views/frontend/about.html.erb
@@ -7,6 +7,7 @@
         <p>на&nbsp;сайте&nbsp;при&nbsp;помощи<br/>социальной сети</p>
       </div>
     </div>
+
     <div class="icoWrap fLeft mw320 s-ico2">
       <div class="ico2">
         <h2>Получи&nbsp;задание</h2>
@@ -15,11 +16,14 @@
       </div>
     </div>
     <div class="icoWrap fLeft oHidden mw305 s-ico3">
+
       <div class="ico3 oHidden">
         <h2>Загрузи фото</h2>
         <p>в свой Инстаграм или<br/>Твиттер, отметив его<br/>специальным хештэгом</p>
       </div>
     </div>
+    <div class="arrow1"></div>
+    <div class="arrow2"></div>
   </div>
   <div class="txtBlock">
     <h2 class='title'>Как получить задание?</h2>
@@ -70,7 +74,7 @@
       Twitter, но и авторизоваться на нашем сайте под тем же аккаунтом, с которого ты публикуешь фотографии.</p>
   </div>
   <div class="participate-button">
-    <a href="">Участвовать в конкурсе</a>
+    <%= link_to "Участвовать в конкурсе", {action: :view} %>
   </div>
 </div>
 </div>
