--- a/app/views/frontend/gifts.html.erb
+++ b/app/views/frontend/gifts.html.erb
@@ -33,7 +33,7 @@
   <div class="containerWithPadding about_product clearfix">
     <div class="anotherTxtBlock txtBlock oHidden" style="background: #f8f8f8;">
         <div class="fintiflushka participate-button">
-          <a href="">Участвовать в конкурсе</a>
+          <%= link_to "Участвовать в конкурсе", {action: :view} %>
         </div>
     </div>
   </div>
