--- a/app/assets/stylesheets/frontend.css.scss
+++ b/app/assets/stylesheets/frontend.css.scss
@@ -8,6 +8,7 @@ body {
   background-attachment: fixed;
   min-width: 640px;
   width: 100%;
+  min-height: 100%;
   overflow-x: hidden;
   position: absolute;
   z-index: 1;
@@ -90,7 +91,7 @@ body {
     background-image: radial-gradient(50% 50%, ellipse farthest-corner, #222 0%, black 80%);
     height: 313px;
     .carousel-content {
-      width: 302%;
+      width: 100%;
       position: relative;
       left: 0px;
       transition: left 2s;
@@ -98,7 +99,7 @@ body {
       -webkit-transition: left 2s; /* Safari and Chrome */
       -o-transition: left 2s; /* Opera */
       .carousel-block {
-        width: 33.3%;
+        width: 100%;
         height: 313px;
         display: inline-block;
         .content {
@@ -224,7 +225,7 @@ body {
         clear: both;
         filter: progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr=#ffffff,endColorstr=#e9e9e9,GradientType=0);
         .tasks-carousel-content {
-          width: 305%;
+          width: 100%;
           position: relative;
           left: 0;
           -moz-transition: all 300ms ease;
@@ -234,8 +235,9 @@ body {
           transition: all 300ms ease;
           .task {
             display: inline-block;
-            width: 33%;
+            width: 100%;
             .image {
+              float: left;
               height: 260px;
               width: 272px;
               display: inline-block;
@@ -565,6 +567,7 @@ body {
       background-repeat: no-repeat;
       background-size: contain;
       padding-left: 45px;
+      padding-bottom: 4px;
       p.name {
         font-weight: bold;
         font-size: 20px;
@@ -645,9 +648,10 @@ body {
     vertical-align: middle;
     overflow: hidden;
     background-size: cover;
+
   }
   .text {
-    margin-top: 38px;
+    margin-top: 30px;
     height: 32px;
     background-size: contain;
     background-position: right center;
@@ -740,4 +744,90 @@ body {
 
 .containerWithPadding {
   width: 100%;
+}
+
+.about_product {
+  .icosBlock {
+    padding-top: 0;
+    padding-bottom: 50px;
+    position: relative;
+  }
+  .txtBlock {
+    padding: 50px 190px 10px;
+    p {
+      padding-top: 15px;
+      font-size: 17px;
+    }
+  }
+}
+
+.arrow1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url("/assets/arrow_left.png");
+  background-repeat: no-repeat;
+  background-position: 26% 49%;
+}
+.arrow2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url("/assets/arrow_right.png");
+  background-repeat: no-repeat;
+  background-position: 64% 33%;
+}
+
+
+input#post_email {
+  width: 210px;
+  height: 40px;
+  margin-top: 15px;
+  border-radius: 12px;
+  font-size: 16px;
+  padding: 0 20px;
+  &:hover, &:focus {
+    border-color: white;
+    box-shadow: white 0 0 20px;
+  }
+}
+
+  input[type="checkbox"] {
+    display: none;
+  }
+  .checkbox {
+    width: 12px;
+    height: 14px;
+    background-image: url("control_ckb_normal.png");
+    background-repeat: no-repeat;
+    background-position: 0 top;
+    background-size : 100% auto;
+    cursor: pointer;
+    &.selection {
+      background-position: 0 -21px;
+    }
+  }
+.control-group {
+  &.text{
+    width: 300px;
+    padding-left: 50px;
+    font-size: 13px;
+    text-align: left;
+    margin: 0 auto;
+  }
+}
+input.butn {
+  margin-top: 23px;
+  border: none;
+  background-color: transparent;
+  background-image: url('control_btn_ok.png');
+  height: 56px;
+  width: 160px;
+  background-position: 0 0;
+  &:hover {
+    background-position: 0 -56px;
+  }
+  &:active {
+    background-position: 0 -112px;
+  }
 }
