--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,7 @@
           <%= image_tag "header_logo.png" %>
         </a>
         <ul class="nav">
-          <% if @user -%>
-              <li><%= link_to @user.name, action: :view, controller: :frontend -%></li>
-          <%- else -%>
-              <li class="login-button"><a href="#">Логин</a></li>
-          <%- end -%>
+          <li <%= %(class=this) if params[:action] == 'lipton' -%>><%= link_to 'Lipton', action: :lipton, controller: :frontend -%></li>
           <li <%= %(class=this) if params[:action] == 'about' -%>><%= link_to 'О конкурсе', action: :about, controller: :frontend -%></li>
           <li <%= %(class=this) if params[:action] == 'gifts' -%>><%= link_to 'Призы', action: :gifts, controller: :frontend -%></li>
         </ul>
