--- a/app/assets/stylesheets/frontend.css.scss
+++ b/app/assets/stylesheets/frontend.css.scss
@@ -563,7 +563,7 @@ body {
     .author {
       float: left;
       height: 45px;
-      background-position: left center;
+      background-position: left 5px;
       background-repeat: no-repeat;
       background-size: contain;
       padding-left: 45px;
