--- a/app/views/frontend/view.html.erb
+++ b/app/views/frontend/view.html.erb
@@ -6,7 +6,7 @@
 
   <div class="info">
     <%= image_tag @user.avatar_url %>
-    <p class="name"><%= @user.name.length %></p>
+    <p class="name"><%= @user.name %></p>
   </div>
 
   <img src="" alt="" class="avatar">
