--- a/app/assets/stylesheets/frontend.css.scss
+++ b/app/assets/stylesheets/frontend.css.scss
@@ -563,9 +563,9 @@ body {
     .author {
       float: left;
       height: 45px;
-      background-position: left 5px;
+      background-position: left 0px;
       background-repeat: no-repeat;
-      background-size: contain;
+      background-size: 40px;
       padding-left: 45px;
       padding-bottom: 4px;
       p.name {
