--- a/app/views/frontend/index.html.erb
+++ b/app/views/frontend/index.html.erb
@@ -27,7 +27,8 @@
             <%= f.check_box :is_subscribed -%> <span class="checkbox"></span>я хочу узнавать о новых конкурсах Липтон
           </div>
           <div class="control-group text">
-            <%= f.check_box :accepted_deal -%> <span class="checkbox"></span>я согласен с <%= link_to 'правилами конкурса', action: :rules -%>
+            # <%= f.check_box :accepted_deal -%> <span class="checkbox"></span>я согласен с <%= link_to 'правилами конкурса', action: :rules -%>
+    		<%= f.check_box -%> <span class="checkbox"></span>я согласен с <%= link_to 'правилами конкурса', action: :rules -%>
           </div>
           <div class="control-group">
             <%= f.submit 'ОК', class: 'butn' -%>
