--- a/app/views/frontend/post.js.erb
+++ b/app/views/frontend/post.js.erb
@@ -4,5 +4,5 @@
     p = $('.overlay > .popup').position();
     $('.overlay > .popup').css('position', 'absolute');
     $('.overlay > .popup').css('top', p.top+'px');
-    $('.background').on('click', function() {$('.overlay').html('');});
+    $('.background').on('click', function() {$('.background').off('click');$('.overlay').html('');});
 })()
