--- a/app/views/frontend/callback.html.erb
+++ b/app/views/frontend/callback.html.erb
@@ -1,2 +1,4 @@
-<h1>Frontend#callback</h1>
-<p>Find me in app/views/frontend/callback.html.erb</p>
+<script type="text/javascript">
+    window.opener.location.href = window.opener.location.href; // перезагрузка материнского окна
+    window.close();
+</script>
