--- a/app/views/frontend/view.html.erb
+++ b/app/views/frontend/view.html.erb
@@ -39,11 +39,11 @@
     <div class="auth-block">
       <p class="title">Войти через:</p>
       <div class="buttons">
-        <p class="with-notice"><a href="/auth/facebook" class="w-button facebook"><span>Facebook</span></a>
+        <p class="with-notice"><a href="/auth/facebook" class="w-button facebook" target="_blank"><span>Facebook</span></a>
           <span class="facebook-notice">Залогинившись через Facebook, ты сможешь только голосовать</span>
         </p>
-        <p><a href="/auth/twitter" class="w-button twitter"><span>Twitter</span></a></p>
-        <p><a href="/auth/instagram" class="w-button instagram"><span>Instagram</span></a></p>
+        <p><a href="/auth/twitter" class="w-button twitter" target="_blank"><span>Twitter</span></a></p>
+        <p><a href="/auth/instagram" class="w-button instagram" target="_blank"><span>Instagram</span></a></p>
       </div>
       <p class="note">Авторизуйся, чтобы выигрывать призы <br>
         и голосовать за фотографии</p>
