--- a/app/assets/stylesheets/frontend.css.scss
+++ b/app/assets/stylesheets/frontend.css.scss
@@ -229,7 +229,8 @@ body {
         clear: both;
         filter: progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr=#ffffff,endColorstr=#e9e9e9,GradientType=0);
         .tasks-carousel-content {
-          width: 100%;
+          width: 400%;
+          font-size: 0;
           position: relative;
           left: 0;
           -moz-transition: all 300ms ease;
@@ -239,7 +240,7 @@ body {
           transition: all 300ms ease;
           .task {
             display: inline-block;
-            width: 100%;
+            width: 25%;
             .image {
               float: left;
               height: 260px;
